# Code-Wizard-LangGraph-C_RAG

./: .env.example  .gitignore  Dockerfile  README.md  body.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  langgraph.json  mixtra_results_large_max_tokens.md  pyproject.toml  requirements.txt  results.md  results0.md  results1.md  results_chat_open_ai.md  vercel.json
.chroma/: chroma.sqlite3
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: ingestion.ipynb  ingestion.py  main.py  server.py
app/api/v1/: __init__.py  code_wizard.py
app/graph/: consts.py  graph.py  state.py
app/graph/chains/: answer_grader.py  generation.py  generation_chain.py  hallucination_grader.py  question_router_chain.py  retrieval_grader.py  router.py
app/graph/chains/tests/: test_chains.py
app/graph/nodes/: __init__.py  enhanced_query.py  filter_state_node.py  generate.py  generate_enhanced_query_node.py  generate_node.py  grade_documents.py  intermediate_nodes.py  retrieve.py  retrieve_and_web_search.py  retrieve_documents_node.py  summarize_conversation_node.py  web_search.py  web_search_node.py
app/graph/utils/: model.py  time.py
app/middleware/: cors_middleware.py
