[tool.poetry]
name = "C_RAG"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langserve = {extras = ["server"], version = ">=0.0.30"}
unstructured = {extras = ["markdown"], version = "^0.14.2"}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[tool.poetry.group.D.dependencies]
ipykernel = "^6.29.4"


[tool.pdm.dev-dependencies]
dev = [
    "langchain-cli>=0.0.15",
]
D = [
    "ipykernel<7.0.0,>=6.29.4",
]

[tool.pdm.build]
includes = ["app"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<3.13,>=3.11"
dependencies = [
    "fastapi[standard]>=0.110.3",
    "uvicorn==0.23.2",
    "langgraph>=0.2.52",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.9",
    "pinecone>=5.4.0",
]
name = "C_RAG"
version = "0.1.0"
description = ""
readme = "README.md"
