[tool.poetry]
name = "C_RAG"
version = "0.1.0"
description = "Your project description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["standard"], version = ">=0.110.3"}
uvicorn = "==0.23.2"
langgraph = ">=0.2.52"
langgraph-checkpoint-sqlite = ">=2.0.1"
langchain = ">=0.3.7,<=0.3.9"  # Upper bound set to avoid breaking changes
langchain-openai = ">=0.2.9"
pinecone = "<5.4.0"  # Ensure compatibility with langchain-pinecone
langchain-pinecone = "<0.2.0"  # Align with compatible Pinecone versions

unstructured = {extras = ["markdown"], version = "^0.14.2"}
langserve = {extras = ["server"], version = ">=0.0.30"}

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.poetry.group.D.dependencies]
ipykernel = "^6.29.4"

[tool.pdm.build]
includes = ["app"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<3.13,>=3.11"
dependencies = [
    "fastapi[standard]>=0.110.3",
    "uvicorn==0.23.2",
    "langgraph>=0.2.52",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain>=0.3.7,<=0.3.9",  # Match the compatible version
    "langchain-openai>=0.2.9",
    "pinecone<5.4.0",  # Ensure compatibility with langchain-pinecone
    "pinecone-client>=3.2.2",
    "langchain-pinecone>=0.2.0",
    "langchain-community>=0.3.7",
    "python-dotenv>=1.0.1",
]   
name = "C_RAG"
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
