[project]
name = "langchain-documentation-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.3",
    "langgraph>=0.2.52",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain>=0.3.7,<=0.3.9",
    "langchain-openai>=0.2.9",
    "langchain-community>=0.3.7",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.19",
    "uvicorn>=0.32.1",
    "langchain-google-genai>=2.0.6",
    "pinecone>=5.3.1",
    "pinecone-client>=5.0.1",
    "langchain-pinecone>=0.2.0",
]
